ci: add 3-platform auto-release with GitHub Actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+      - name: Convert to full clone
+        run: git fetch --unshallow
       - name: Setup vcpkg
         uses: lukka/run-vcpkg@v11
         with:
