--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Convert to full clone
         run: git fetch --unshallow
+      - name: Install system deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake ninja-build libgl1-mesa-dev libudev-dev libopenal-dev libflac-dev libvorbis-dev libx11-dev libxrandr-dev libxcursor-dev libxi-dev
       - name: Bootstrap vcpkg
         run: |
           git clone --depth 1 https://github.com/Microsoft/vcpkg.git
