--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,11 +58,17 @@ jobs:
         shell: bash
         run: |
           mkdir -p package
-          # ① 可执行文件（矩阵变量）
-          cp build/${{ matrix.exe }} package/
-          # ② 动态库（仅 Win 需要 dll；Linux/macOS 无）
+          # ① 找到真实可执行文件（Ninja vs Visual Studio 路径不同）
+          if [ -f build/bin/Release/${{ matrix.exe }} ]; then
+            cp build/bin/Release/${{ matrix.exe }} package/
+          elif [ -f build/${{ matrix.exe }} ]; then
+            cp build/${{ matrix.exe }} package/
+          else
+            find build -name ${{ matrix.exe }} -exec cp {} package/ \;
+          fi
+          # ② 仅 Windows 拷 dll
           [[ "${{ runner.os }}" == "Windows" ]] && \
-          cp vcpkg/installed/${{ matrix.triplet }}/bin/*.dll package/ 2>/dev/null || true
+            cp vcpkg/installed/${{ matrix.triplet }}/bin/*.dll package/ 2>/dev/null || true
           # ③ 压包
           (cd package && zip -r ../PongDemo-${{ matrix.triplet }}.zip .)
 
