--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Convert to full clone
         run: git fetch --unshallow
+      - name: Install Ninja
+        run: choco install ninja -y
       - name: Install system deps
         run: |
           if [ "${{ runner.os }}" = "Linux" ]; then
@@ -52,8 +54,12 @@ jobs:
         run: ./vcpkg/vcpkg install sfml --triplet=${{ matrix.triplet }}
 
       - name: Configure & Build
+        shell: pwh
         run: |
-          cmake -B build -S . -DCMAKE_TOOLCHAIN_FILE=$PWD/vcpkg/scripts/buildsystems/vcpkg.cmake -G Ninja -DCMAKE_BUILD_TYPE=Release
+          cmake -B build -S . `
+            -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}\vcpkg\scripts\buildsystems/vcpkg.cmake" `
+            -G Ninja `
+            -DCMAKE_BUILD_TYPE=Release
           cmake --build build --config Release
           
       - name: Package
