ci: add 3-platform auto-release with GitHub Actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
           New-Item -ItemType Directory -Force package
           # ① 拷贝可执行文件
           $exe = Get-ChildItem -Path build -Name ${{ matrix.exe }} -File -Recurse | Select-Object -First 1
-          if ($exe) { Copy-Item $exe.FullName package/ }
+          if ($exe) { Copy-Item -Path $exe.FullName -Destination package/ }
           else { throw "Executable ${{ matrix.exe }} not found" }
           # ② 仅 Windows 拷 dll
           if ("${{ runner.os }}" -eq "Windows") {
