--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,13 +55,28 @@ jobs:
       - name: Install SFML
         run: ./vcpkg/vcpkg install sfml --triplet=${{ matrix.triplet }}
 
-      - name: Configure & Build
+      - name: Configure & Build(Windows)
+        if: runner.os == 'Windows'
         shell: pwsh
         run: |
+          # 添加 MSVC 环境
+          & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.ps1"
           cmake -B build -S . `
-            -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}\vcpkg\scripts\buildsystems/vcpkg.cmake" `
-            -G Ninja `
-            -DCMAKE_BUILD_TYPE=Release
+            -G "Visual Studio 17 2022" -A x64 `
+            -DCMAKE_TOOLCHAIN_FILE="$env:GITHUB_WORKSPACE\vcpkg\scripts\buildsystems\vcpkg.cmake"
+          cmake --build build --config Release
+            # ===== 非 Windows：保持 Ninja =====
+      - name: Configure & Build (Unix)
+        if: runner.os != 'Windows'
+        shell: bash
+        run: |
+          # 让 CMake 找到 vcpkg 提供的 SFMLConfig.cmake
+          export SFML_DIR="${{ github.workspace }}/vcpkg/installed/${{ matrix.triplet }}/share/sfml"
+          cmake -B build -S . \
+            -G Ninja \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake" \
+            -DCMAKE_PREFIX_PATH="${{ github.workspace }}/vcpkg/installed/${{ matrix.triplet }}"
           cmake --build build --config Release
           
       - name: Package
