--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems
     CACHE STRING "Vcpkg toolchain file")
 
 file(GLOB SOURCES CONFIGURE_DEPENDS src/*.cpp)
-add_executable(main ${SOURCES} "src/Paddle.cpp" "src/Paddle.h" "src/Ball.h" "src/Ball.cpp")
+add_executable(main ${SOURCES} "src/Paddle.cpp" "src/Paddle.h" "src/Ball.h" "src/Ball.cpp" "src/AiPaddle.h" "src/AiPaddle.cpp")
 
 # SFML 3.0 组件名大写
 find_package(SFML 3.0 COMPONENTS Graphics Window System REQUIRED)
